temporary fix alignment button

--- a/website/css/style.css
+++ b/website/css/style.css
@@ -1,84 +1,84 @@
 /* #region Book style */
 
 * {
-	font-family: "Josefin Sans", sans-serif;
-	font-optical-sizing: auto;
-	font-weight: 400;
-	font-style: normal;
-	box-sizing: border-box;
+    font-family: "Josefin Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    box-sizing: border-box;
 }
 
 main>section {
-	display: flex;
-	flex-direction: column;
-	padding: 0 10%;
+    display: flex;
+    flex-direction: column;
+    padding: 0 10%;
 }
 
 @media screen and (min-width: 520px) {
-	main>section {
-		display: flex;
-		flex-direction: column;
-		padding: 0 20%;
-	}
+    main>section {
+        display: flex;
+        flex-direction: column;
+        padding: 0 20%;
+    }
 }
 
 main>section>div:nth-of-type(1) {
-	width: 100%;
-	height: 300px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	overflow: hidden;
+    width: 100%;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
 }
 
 main>section img {
-	max-width: 100%;
-	height: auto;
-	aspect-ratio: inherit;
-	border-radius: 12px;
+    max-width: 100%;
+    height: auto;
+    aspect-ratio: inherit;
+    border-radius: 12px;
 }
 
 main>section>ul {
-	padding-left: 0;
-	list-style-type: none;
+    padding-left: 0;
+    list-style-type: none;
 }
 
 main>section>ul>li {
-	display: inline-flex;
+    display: inline-flex;
 }
 
 main>section>ul>li>img {
-	margin: 0 10px;
+    margin: 0 10px;
 }
 
 main>section>div:nth-of-type(2) {
-	display: flex;
-	justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
 }
 
 main>section>ul:nth-of-type(2)>li>a {
-	font-weight: 300;
-	font-style: italic;
-	color: black;
+    font-weight: 300;
+    font-style: italic;
+    color: black;
 }
 
 main article {
-	background-color: rgb(247, 228, 207);
-	border-radius: 12px;
-	padding: 16px;
-	display: flex;
-	margin-bottom: 16px;
+    background-color: rgb(247, 228, 207);
+    border-radius: 12px;
+    padding: 16px;
+    display: flex;
+    margin-bottom: 16px;
 }
 
 main article h3 {
-	margin: 0;
+    margin: 0;
 }
 
 main article>img {
-	width: 32px;
-	height: 32px;
-	border-radius: 50%;
-	margin-right: 16px;
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    margin-right: 16px;
 }
 
 /*#endregion*/
@@ -86,27 +86,30 @@ main article>img {
 /* #region Buttons style */
 
 main input[type="button"],
-nav ul>li>a {
-	color: #ffffff;
-	background-color: #A72925;
-	border-radius: 16px;
-	border-width: 0;
-	text-decoration: none;
-	padding: 8px;
-	text-align: center;
-	transition: box-shadow 0.3s ease, background-color 0.1s ease;
-	min-width: 130px;
-	display: inline-block;
+nav>div>div>ul>li>a {
+    color: #ffffff;
+    background-color: #A72925;
+    border-radius: 16px;
+    border-width: 0;
+    text-decoration: none;
+    padding: 8px;
+    text-align: center;
+    transition: box-shadow 0.3s ease, background-color 0.1s ease;
+    min-width: 130px;
+    display: inline-block;
 }
+
+
+
 
 main input[type="button"]:hover,
 nav ul>li>a:hover {
-	box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
 }
 
 main input[type="button"]:active,
 nav ul>li>a:active {
-	background-color: #7b1d19;
+    background-color: #7b1d19;
 }
 
 /* #endregion */
@@ -114,17 +117,17 @@ nav ul>li>a:active {
 /*#region Admin style*/
 
 main section>ul {
-	padding-left: 0%;
-	list-style: none;
+    padding-left: 0%;
+    list-style: none;
 }
 
 main h1 {
-	padding: 10px;
+    padding: 10px;
 }
 
 hr {
-	border: solid black 1px;
-	width: 90%;
+    border: solid black 1px;
+    width: 90%;
 }
 
 /*#endregion*/
@@ -132,28 +135,28 @@ hr {
 /*#region Form style */
 
 form {
-	width: 100%;
+    width: 100%;
 }
 
 form ul {
-	padding: 20px;
-	display: grid;
-	grid-template-columns: 1fr 1fr;
+    padding: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
 
 form footer {
-	display: flex;
-	flex-direction: column;
-	align-items: end;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
 }
 
 form footer input {
-	margin-bottom: 20px;
-	margin-right: 20px;
-	margin-top: 0;
-	color: #ffffff;
-	background-color: #A72925;
-	border: 1px;
+    margin-bottom: 20px;
+    margin-right: 20px;
+    margin-top: 0;
+    color: #ffffff;
+    background-color: #A72925;
+    border: 1px;
 }
 
 /*
@@ -243,24 +246,24 @@ section article>div svg  {
 nav,
 nav>div>div:nth-child(5),
 nav>div>div:nth-child(6) {
-	background-color: #E6AA68;
+    background-color: #E6AA68;
 }
 
 nav ul>li {
-	margin-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 nav>div>div:nth-child(6)>div:nth-child(2)>ul>li>a,
 nav>div>div:nth-child(5)>div:nth-child(2)>ul>li>a {
-	color: white;
-	background-color: #D9534F;
-	border-radius: 12px;
+    color: white;
+    background-color: #D9534F;
+    border-radius: 12px;
 }
 
 nav>div>div:nth-child(5)>div:nth-child(2)>ul>li>a.btn,
 nav>div>div:nth-child(6)>div:nth-child(2)>ul>li>a.btn {
-	background-color: #F7E4CF;
-	color: black;
+    background-color: #F7E4CF;
+    color: black;
 }
 
 /*#endregion*/
